"Add multi-tiered OpenAI model resolution and tests. Refactor advisor and API usage to enforce explicit model selection at Medium tier."