@@ -10,6 +10,8 @@ import com.openai.models.responses.ResponseOutputMessage.Content;
 import com.openai.models.responses.ResponseOutputText;
 import fr.ses10doigts.tradeIO5.configuration.properties.OpenAIProperties;
 import fr.ses10doigts.tradeIO5.model.dto.tree.opinion.LlmAdvice;
+import fr.ses10doigts.tradeIO5.model.enumerate.LlmTier;
+import fr.ses10doigts.tradeIO5.model.enumerate.OpenAIModel;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,22 +29,18 @@ public class OpenAIService {
     private final OpenAIProperties props;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
-    // System prompt pour forcer JSON
-    private static final String SYSTEM_JSON_PROMPT = """
-    Tu es un assistant qui répond **uniquement** par un JSON valide.
-    **Ne mets jamais de bloc de code**, ni de ```json```.
-    Le texte que tu retournes doit avoir exactement ce format et ces champs : { "indic": String, "value": Double }
-    Voici le prompt :
-    """;
-
     /**
-     * Envoie une requête au modèle et retourne directement un LlmAdvice
+     * Envoie une requête au modèle pour le niveau donné et retourne directement un LlmAdvice.
+     * Le niveau ({@link LlmTier}) est obligatoire : il n'y a volontairement pas de modèle par
+     * défaut implicite, chaque appelant doit choisir explicitement son niveau de coût/capacité.
      */
-    public LlmAdvice ask(String userInput ){
+    public LlmAdvice ask(String userInput, LlmTier tier ){
+
+        OpenAIModel model = resolveModel(tier);
 
         Response response = client.responses().create(
                 ResponseCreateParams.builder()
-                        .model(props.defaultModel().toChatModel())
+                        .model(model.toChatModel())
                         .input(userInput)
                         .build()
         );
@@ -55,7 +53,7 @@ public class OpenAIService {
         if( !texts.isEmpty() ){
             // Conversion JSON → DTO
             try {
-                LlmAdvice advice = objectMapper.readValue(cleanString(texts.get(0).replaceAll("```\\w*", "")), LlmAdvice.class);
+                LlmAdvice advice = objectMapper.readValue(cleanString(texts.getFirst().replaceAll("```\\w*", "")), LlmAdvice.class);
                 advice.setValid(true);
                 return advice;
             } catch (JsonProcessingException e) {
@@ -65,6 +63,39 @@ public class OpenAIService {
         }
 
         return LlmAdvice.invalid();
+    }
+
+    /**
+     * Résout le niveau logique demandé vers un modèle concret configuré. Si le niveau demandé
+     * n'a pas de modèle configuré, bascule sur le niveau immédiatement inférieur (HIGH → MEDIUM → LOW).
+     * Si aucun niveau, y compris LOW, n'est configuré, lève une exception (pas de fallback silencieux
+     * en dessous de LOW).
+     */
+    OpenAIModel resolveModel(LlmTier tier) {
+        OpenAIProperties.ModelTiers tiers = props.model();
+
+        OpenAIModel model = switch (tier) {
+            case HIGH -> tiers.high();
+            case MEDIUM -> tiers.medium();
+            case LOW -> tiers.low();
+        };
+
+        if (model != null) {
+            return model;
+        }
+
+        return switch (tier) {
+            case HIGH -> {
+                logger.warn("Aucun modèle OpenAI configuré pour le niveau HIGH (tradeio.openai.model.high), fallback vers MEDIUM");
+                yield resolveModel(LlmTier.MEDIUM);
+            }
+            case MEDIUM -> {
+                logger.warn("Aucun modèle OpenAI configuré pour le niveau MEDIUM (tradeio.openai.model.medium), fallback vers LOW");
+                yield resolveModel(LlmTier.LOW);
+            }
+            case LOW -> throw new IllegalStateException(
+                    "Aucun modèle OpenAI configuré : tradeio.openai.model.low doit définir au minimum un modèle de repli (medium/high sont optionnels)");
+        };
     }
 
     private static String cleanString( String result ){
